Final period alignment fix in day-counter

--- a/day-counter/css/style.css
+++ b/day-counter/css/style.css
@@ -72,7 +72,7 @@ img {
 	position: absolute;
 	top: 0;
 	left: 5%;
-    margin-left: 6px;
+    margin-left: -14px;
     margin-top: 0px;
 	width: 90%;
     font-family: Ubuntu, sans-serif;
@@ -83,7 +83,7 @@ img {
 	position: absolute;
 	top: 0;
 	left: 5%;
-    margin-left: 0px;
+    margin-left: -20px;
     margin-top: 0px;
 	width: 90%;
     font-family: Ubuntu, sans-serif;
